--- a/PracticalTest/web/invalid.html
+++ b/PracticalTest/web/invalid.html
@@ -6,16 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Login Page</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Login Page</h1>
-        <form action="login" method="POST">
-            Username: <input type="text" name="txtUsername" value="" /> <br/>
-            Password: <input type="password" name="txtPassword" value="" /> <br/>
-            <input type="submit" value="Login" name="btAction" />
-        </form>
+        <div>TODO write content</div>
     </body>
 </html>
