--- a/PracticalTest/web/invalid.html
+++ b/PracticalTest/web/invalid.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>Invalid Page</h1>
+        <h2>Invalid username or passwored</h2>
+        <a href="login.html">Click here to login again</a>
     </body>
 </html>
